# big_enum_set

./: .gitignore  .travis.yml  Cargo.toml  LICENSE-MIT  README.md  RELEASES.md
.github/workflows/: build.yml
big_enum_set/: Cargo.toml
big_enum_set/benches/: bench.rs
big_enum_set/src/: __internal.rs  lib.rs
big_enum_set/tests/: ops.rs  serde.rs  trybuild.rs
big_enum_set/tests/compile-fail/: variants.rs  variants.stderr
big_enum_set/tests/compile-pass/: no_std.rs
big_enum_set_derive/: Cargo.toml  README.md
big_enum_set_derive/src/: lib.rs
