[package]
name = "big_enum_set"
version = "0.1.3"
authors = ["Manu Thambi <manu@meshcapital.com>", "Lymia Aluysia <lymia@lymiahugs.com>"]
edition = "2018"

description = "A library for creating sets of enums with a large number of variants."
keywords = ["enum", "bitset", "set", "enumset"]
categories = ["data-structures"]

documentation = "https://docs.rs/big_enum_set/"
repository = "https://github.com/manuthambi/big_enum_set"
readme = "../README.md"

license = "MIT/Apache-2.0"

[features]
nightly = ["big_enum_set_derive/nightly"]
serde = ["serde2", "big_enum_set_derive/serde"]

[dependencies]
big_enum_set_derive = { version = "0.1.2", path = "../big_enum_set_derive" }
serde2 = { package = "serde", version = "1.0.101", default-features = false, optional = true }
static_assertions = "0.3.4"

[dev-dependencies]
bincode = "1.2"
serde_derive = "1.0.101"
serde_json = "1.0.40"
