[package]
name = "big_enum_set"
version = "0.2.0"
authors = ["Manu Thambi <hellomanu@gmail.com>", "Alissa Rao <lymia@lymiahugs.com>"]
edition = "2018"

description = "A library for creating sets of enums with a large number of variants."
keywords = ["enum", "bitset", "set", "enumset"]
categories = ["data-structures"]

documentation = "https://docs.rs/big_enum_set/"
repository = "https://github.com/manuthambi/big_enum_set"
readme = "../README.md"

license = "MIT/Apache-2.0"

[badges]
travis-ci = { repository = "manuthambi/big_enum_set", branch = "master" }
maintenance = { status = "actively-developed" }

[features]
serde = ["serde2", "big_enum_set_derive/serde"]

[dependencies]
big_enum_set_derive = { version = "0.2.0", path = "../big_enum_set_derive" }
serde2 = { package = "serde", version = "1.0.101", default-features = false, optional = true }
static_assertions = "0.3.4"

[dev-dependencies]
bincode = "1.2"
serde_derive = "1.0.101"
serde_json = "1.0.40"
trybuild = "1.0.27"
rustversion = "1.0.2"
criterion = "0.3"

[[bench]]
name = "bench"
harness = false
