[package]
name = "big_enum_set_derive"
version = "0.1.2"
authors = ["Manu Thambi <manu@meshcapital.com>", "Lymia Aluysia <lymia@lymiahugs.com>"]
edition = "2018"

description = "An internal helper crate for big_enum_set."

documentation = "https://docs.rs/big_enum_set_derive/"
repository = "https://github.com/manuthambi/big_enum_set"

license = "MIT/Apache-2.0"

[lib]
proc-macro = true

[features]
nightly = ["proc-macro2/nightly", "darling/diagnostics"]
serde = []

[dependencies]
darling = "0.10.1"
syn = "1.0.5"
quote = "1.0.2"
proc-macro2 = "1.0.4"
bit-set = "0.5.1"
bit-vec = "0.5.1"
