[package]
name = "big_enum_set_derive"
version = "0.2.1"
authors = ["Manu Thambi <hellomanu@gmail.com>", "Alissa Rao <lymia@lymiahugs.com>"]
edition = "2018"

description = "An internal helper crate for big_enum_set. Not public API."

documentation = "https://docs.rs/big_enum_set_derive/"
repository = "https://github.com/manuthambi/big_enum_set"

license = "MIT/Apache-2.0"

[lib]
proc-macro = true

[features]
serde = []

[dependencies]
darling = "0.10.1"
syn = "1.0.5"
quote = "1.0.2"
proc-macro2 = "1.0.4"
bit-vec = "0.6.3"

[dev-dependencies]
big_enum_set = { version = "0.2.1", path = "../big_enum_set" }
