[package]
name = "big_enum_set_derive"
version = "0.2.1"
authors = ["Manu Thambi <hellomanu@gmail.com>", "Alissa Rao <lymia@lymiahugs.com>"]
edition = "2021"

description = "An internal helper crate for big_enum_set. Not public API."

documentation = "https://docs.rs/big_enum_set_derive/"
repository = "https://github.com/manuthambi/big_enum_set"

license = "MIT/Apache-2.0"

[lib]
proc-macro = true

[features]
serde = []

[dependencies]
darling = "0.20"
syn = "2"
quote = "1.0.2"
proc-macro2 = "1.0.4"
bit-vec = "0.6"
